// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Merge merge-schema 1`] = `
"directive @example on FIELD | FIELD_DEFINITION | ARGUMENT_DEFINITION

interface Node {
  id: ID!
}

type RootMutation {
  updateUser(id: String, payload: UserPayload): String
  deleteUser(id: String, payload: UserPayload): String
  login(user: String): String
  createPicture: String
}

union Images = Image | Picture

type Image implements Node {
  name: String
  size: ImageSize
}

type Viewer {
  username(short: Boolean): String
}

type RootQuery {
  viewer(user: String): Viewer
}

type Picture implements Node & INode {
  name: String @example
  size(name: String @example): ImageSize
  isJPG: ImageSize
}

schema {
  mutation: RootMutation
}

interface INode {
  id: ID!
}
"
`;

exports[`Merge override__resolvers 1`] = `
"union Images = Image | Picture

input UserPayload {
  name: String
  password: String
}

directive @example on FIELD | FIELD_DEFINITION | ARGUMENT_DEFINITION

interface INode {
  id: ID!
}

type RootMutation {
  updateUser(id: String, payload: UserPayload): String
  deleteUser(id: String, payload: UserPayload): String
  login(user: String): String
  createPicture: Images
}

type Image implements INode {
  id: ID!
  name: String
  size: ImageSize
}

type RootQuery {
  images: [Image]
  viewer(user: String): Viewer
}

type Viewer {
  username(short: Boolean): String
}

type Picture implements INode {
  name: String @example
  size(name: String @example): ImageSize
  id: ID!
  isJPG: ImageSize
}

enum ImageSize {
  jpg
  gif
}

schema {
  mutation: RootMutation
  query: RootQuery
}
"
`;

exports[`Merge override__resolvers 2`] = `
Object {
  "data": Object {
    "createPicture": Object {
      "id": "coolPicture",
      "isJPG": "jpg",
      "name": "cool",
    },
  },
}
`;

exports[`Schema created from one graphQl 1`] = `
Object {
  "Picture": Object {
    "isJPG": [Function],
    "size": [Function],
  },
  "RootMutation": Object {
    "createPicture": [Function],
    "deleteUser": [Function],
    "login": [Function],
    "updateUser": [Function],
  },
  "RootQuery": Object {
    "viewer": [Function],
  },
  "Viewer": [Function],
}
`;

exports[`Schema created from one graphQl 2`] = `
"type RootMutation {
  updateUser(id: String, payload: UserPayload): String
  deleteUser(id: String, payload: UserPayload): String
  login(user: String): String
  createPicture: String
}

type Image {
  name: String
  size: ImageSize
}

type Viewer {
  username: String
}

type RootQuery {
  viewer(user: String): Viewer
}

type Picture {
  name: String
  size: ImageSize
  isJPG: ImageSize
}
"
`;

exports[`Schema created from one graphQl 3`] = `
Object {
  "definitions": Array [
    Object {
      "description": undefined,
      "directives": Array [],
      "fields": Array [
        Object {
          "arguments": Array [
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "directives": Array [],
              "kind": "InputValueDefinition",
              "loc": Object {
                "end": 43,
                "start": 33,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 35,
                  "start": 33,
                },
                "value": "id",
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 43,
                  "start": 37,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 43,
                    "start": 37,
                  },
                  "value": "String",
                },
              },
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "directives": Array [],
              "kind": "InputValueDefinition",
              "loc": Object {
                "end": 65,
                "start": 45,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 52,
                  "start": 45,
                },
                "value": "payload",
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 65,
                  "start": 54,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 65,
                    "start": 54,
                  },
                  "value": "UserPayload",
                },
              },
            },
          ],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 74,
            "start": 22,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 32,
              "start": 22,
            },
            "value": "updateUser",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 74,
              "start": 68,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 74,
                "start": 68,
              },
              "value": "String",
            },
          },
        },
        Object {
          "arguments": Array [
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "directives": Array [],
              "kind": "InputValueDefinition",
              "loc": Object {
                "end": 98,
                "start": 88,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 90,
                  "start": 88,
                },
                "value": "id",
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 98,
                  "start": 92,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 98,
                    "start": 92,
                  },
                  "value": "String",
                },
              },
            },
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "directives": Array [],
              "kind": "InputValueDefinition",
              "loc": Object {
                "end": 120,
                "start": 100,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 107,
                  "start": 100,
                },
                "value": "payload",
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 120,
                  "start": 109,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 120,
                    "start": 109,
                  },
                  "value": "UserPayload",
                },
              },
            },
          ],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 129,
            "start": 77,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 87,
              "start": 77,
            },
            "value": "deleteUser",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 129,
              "start": 123,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 129,
                "start": 123,
              },
              "value": "String",
            },
          },
        },
        Object {
          "arguments": Array [
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "directives": Array [],
              "kind": "InputValueDefinition",
              "loc": Object {
                "end": 150,
                "start": 138,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 142,
                  "start": 138,
                },
                "value": "user",
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 150,
                  "start": 144,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 150,
                    "start": 144,
                  },
                  "value": "String",
                },
              },
            },
          ],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 159,
            "start": 132,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 137,
              "start": 132,
            },
            "value": "login",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 159,
              "start": 153,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 159,
                "start": 153,
              },
              "value": "String",
            },
          },
        },
        Object {
          "arguments": Array [],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 183,
            "start": 162,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 175,
              "start": 162,
            },
            "value": "createPicture",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 183,
              "start": 177,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 183,
                "start": 177,
              },
              "value": "String",
            },
          },
        },
      ],
      "interfaces": Array [],
      "kind": "ObjectTypeDefinition",
      "loc": Object {
        "end": 185,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 17,
          "start": 5,
        },
        "value": "RootMutation",
      },
    },
    Object {
      "description": undefined,
      "directives": Array [],
      "fields": Array [
        Object {
          "arguments": Array [],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 214,
            "start": 202,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 206,
              "start": 202,
            },
            "value": "name",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 214,
              "start": 208,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 214,
                "start": 208,
              },
              "value": "String",
            },
          },
        },
        Object {
          "arguments": Array [],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 232,
            "start": 217,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 221,
              "start": 217,
            },
            "value": "size",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 232,
              "start": 223,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 232,
                "start": 223,
              },
              "value": "ImageSize",
            },
          },
        },
      ],
      "interfaces": Array [],
      "kind": "ObjectTypeDefinition",
      "loc": Object {
        "end": 234,
        "start": 187,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 197,
          "start": 192,
        },
        "value": "Image",
      },
    },
    Object {
      "description": undefined,
      "directives": Array [],
      "fields": Array [
        Object {
          "arguments": Array [],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 268,
            "start": 252,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 260,
              "start": 252,
            },
            "value": "username",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 268,
              "start": 262,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 268,
                "start": 262,
              },
              "value": "String",
            },
          },
        },
      ],
      "interfaces": Array [],
      "kind": "ObjectTypeDefinition",
      "loc": Object {
        "end": 270,
        "start": 236,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 247,
          "start": 241,
        },
        "value": "Viewer",
      },
    },
    Object {
      "directives": Array [],
      "fields": Array [
        Object {
          "arguments": Array [
            Object {
              "defaultValue": undefined,
              "description": undefined,
              "directives": Array [],
              "kind": "InputValueDefinition",
              "loc": Object {
                "end": 317,
                "start": 305,
              },
              "name": Object {
                "kind": "Name",
                "loc": Object {
                  "end": 309,
                  "start": 305,
                },
                "value": "user",
              },
              "type": Object {
                "kind": "NamedType",
                "loc": Object {
                  "end": 317,
                  "start": 311,
                },
                "name": Object {
                  "kind": "Name",
                  "loc": Object {
                    "end": 317,
                    "start": 311,
                  },
                  "value": "String",
                },
              },
            },
          ],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 326,
            "start": 298,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 304,
              "start": 298,
            },
            "value": "viewer",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 326,
              "start": 320,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 326,
                "start": 320,
              },
              "value": "Viewer",
            },
          },
        },
      ],
      "interfaces": Array [],
      "kind": "ObjectTypeDefinition",
      "loc": Object {
        "end": 328,
        "start": 272,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 293,
          "start": 284,
        },
        "value": "RootQuery",
      },
    },
    Object {
      "description": undefined,
      "directives": Array [],
      "fields": Array [
        Object {
          "arguments": Array [],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 359,
            "start": 347,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 351,
              "start": 347,
            },
            "value": "name",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 359,
              "start": 353,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 359,
                "start": 353,
              },
              "value": "String",
            },
          },
        },
        Object {
          "arguments": Array [],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 377,
            "start": 362,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 366,
              "start": 362,
            },
            "value": "size",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 377,
              "start": 368,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 377,
                "start": 368,
              },
              "value": "ImageSize",
            },
          },
        },
        Object {
          "arguments": Array [],
          "description": undefined,
          "directives": Array [],
          "kind": "FieldDefinition",
          "loc": Object {
            "end": 396,
            "start": 380,
          },
          "name": Object {
            "kind": "Name",
            "loc": Object {
              "end": 385,
              "start": 380,
            },
            "value": "isJPG",
          },
          "type": Object {
            "kind": "NamedType",
            "loc": Object {
              "end": 396,
              "start": 387,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 396,
                "start": 387,
              },
              "value": "ImageSize",
            },
          },
        },
      ],
      "interfaces": Array [],
      "kind": "ObjectTypeDefinition",
      "loc": Object {
        "end": 398,
        "start": 330,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 342,
          "start": 335,
        },
        "value": "Picture",
      },
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 399,
    "start": 0,
  },
}
`;
